--- a/source/assets/css/style.sass
+++ b/source/assets/css/style.sass
@@ -14,7 +14,7 @@ body
   justify-content: center
   align-items: center
   flex-direction: column
-  background: black
+  background: #222
   color: white
   font-size: 2rem
   text-align: center
