--- a/source/assets/css/style.sass
+++ b/source/assets/css/style.sass
@@ -1,6 +1,5 @@
 @import "bourbon"
 @import "normalize"
-@import "functions"
 @import "fonts/gotham/gotham"
 
 *
@@ -35,12 +34,12 @@ body
       font-size: 1.3rem
 
 .charge
-  width: rem(350px)
-  border: rem(10px) solid white
-  height: rem(150px)
+  width: 350px
+  border: 10px solid white
+  height: 150px
   position: relative
   display: flex
-  border-radius: rem(12px)
+  border-radius: 12px
   z-index: 2
   &::after
     content: ''
@@ -52,7 +51,7 @@ body
     width: 1.5rem
     background: white
     border: 2px solid white
-    border-radius: 0 rem(10px) rem(10px) 0
+    border-radius: 0 10px 10px 0
     z-index: -1
 
   .charge-fill
@@ -76,8 +75,8 @@ body
 
 @keyframes pulse
   0%
-    box-shadow: inset 0 0 0 rem(1px) rgba(0, 0, 0, 0.0)
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.0)
   50%
-    box-shadow: inset 0 0 rem(15px) rem(15px) rgba(0, 0, 0, 0.1)
+    box-shadow: inset 0 0 15px 15px rgba(0, 0, 0, 0.1)
   100%
-    box-shadow: inset 0 0 rem(15px) rem(15px) rgba(0, 0, 0, 0)
+    box-shadow: inset 0 0 15px 15px rgba(0, 0, 0, 0)
